docs(example): transform in multi-module project, rename